Add second image on main page, style same as first one

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body{
     overflow-x: hidden;
     display: grid;
     grid-template-columns: 45% auto;
-    grid-template-rows: auto auto 700px 700px auto;
+    grid-template-rows: auto 120px 800px 800px auto;
     grid-template-areas: 
         "hd hd"
         "text text"
@@ -156,17 +156,17 @@ li a:hover {
     background-repeat: no-repeat;
     grid-area: img1; 
 }
-.container-1 p {
+.container-1 p, .container-2 p  {
     position: relative;
     display: grid;
-    grid-template-columns: 65%;
+    grid-template-columns: 30%;
     justify-content: center;
     text-align: left;
     font-family: Fuzzy Bubbles, sans-serif;
     font-size: 1.1em;
-    top: 380px;
+    top: 440px;
 }
-#pool-title {
+#pool-title, #playground-title {
     text-align: center;
     font-family: Shizuru, sans-serif;
     font-size: 1.9em;
@@ -174,67 +174,28 @@ li a:hover {
     margin-bottom: 2%;
 
 }
-#pool-title a {
+#pool-title a, #playground-title a  {
     text-decoration: none;
     color: black;
 }
-#pool-title a:hover {
+#pool-title a:hover, #playground-title a:hover {
     font-size: 1.7rem;
 }
 #logo:hover {
     color: white;
 }
-/*
+
 .container-2 {
- 
+    background-image: url("../images/bullmastiff-img.png");
     width: 100%;
     height: 100%;
     position: relative;
-    display: flex;
-    background-position: center;
     background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
-    grid-area: img2;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+    grid-area: img3; 
 }
-
-.img-2 {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.playground-text {
-    display: grid;
-    grid-template-columns: minmax(auto, 18em);
-    grid-template-rows: minmax(auto, 15em);
-    justify-content: center;
-    text-align: center;
-    font-family: Fuzzy Bubbles, sans-serif;
-    font-size: 1.1em;
-}
-
-#playground-title {
-    display: flex;
-    font-size: 1.9em;
-    letter-spacing: 4px;
-    margin-bottom: 2%;
-
-}
-
-#playground-title a {
-    text-decoration: none;
-    color: black;
-}
-
-#playground-title a:hover {
-    font-size: 1.7rem;
-}
-
+/*
 .container-3 {
     background-image: url("../images/containter1-img.png");
     width: 100%;
@@ -733,11 +694,21 @@ div.container-1 {
     width: 100%;
     height: 120%;
 }
-  div.container-1 p {
+div.container-2 {
+    width: 100%;
+    height: 100%;
+}
+  div.container-1 p{
     font-size: .5em;
     position: relative;
     top: 200px;
     grid-template-columns: 50%;
+}
+div.container-2 p {
+    font-size: .5em;
+    position: relative;
+    top: 250px;
+    grid-template-columns: 50%
 }
 .form-btn {
     font-size: small;
@@ -807,8 +778,11 @@ table.time-table td, .time-table th {
         width: 100%;
         height: 150%;
     }
-    
-      .container-1 p {
+    .container-2{
+        width: 100%;
+        height: 110%;
+    }
+      .container-1 p, .container-2 p{
         font-size: .65em;
         position: absolute;
         left: 50%;
@@ -867,7 +841,11 @@ table.time-table td, .time-table th {
         width: 100%;
         height: 150%;
     }
-      .container-1 p {
+    .container-2 {
+        width: 100%;
+        height: 100%;
+    }
+      .container-1 p, .container-2 p {
         font-size: .65em;
         position: absolute;
         left: 50%;
@@ -944,7 +922,7 @@ table.time-table td, .time-table th {
     body {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto 300px 300px auto;
+        grid-template-rows: auto auto 500px 500px auto;
         grid-template-areas: 
             "hd hd"
             "text text"
@@ -964,15 +942,15 @@ table.time-table td, .time-table th {
             "img3 img4"
             "foot foot";
 }
-    .container-1 {
+    .container-1, .container-2 {
         width: 100%;
-        height: 150%;
+        height: 100%;
     }
 
-      .container-1 p {
+      .container-1 p, .container-2 p{
         grid-template-columns: 60%;
         font-size: .7em;
-        top: 250px;
+        top: 280px;
     }
 
     html, body {
@@ -1073,11 +1051,11 @@ table.time-table td, .time-table th {
         top: 80%;
      
     }
-    .container-1 {
+    .container-1, .container-2 {
         width: 100%;
         height: 80%;
     }
-      .container-1 p {
+      .container-1 p, .container-2 p{
         grid-template-columns: 65%;
         font-size: .8em;
         top: 310px;
@@ -1141,12 +1119,12 @@ table.time-table td, .time-table th {
 
 }
 @media (min-width: 1670px) and (max-width: 1850px)   {
-    .container-1 {
+    .container-1, .container-2 {
           width: 100%;
           height: 100%;
     }
 
-      .container-1 p {
+      .container-1 p, .container-2 p {
         grid-template-columns: 55%;
         font-size: 1.1em;
         top: 375px;
@@ -1156,12 +1134,23 @@ table.time-table td, .time-table th {
       }
     }
 @media (min-width: 1850px) and (max-width: 2560px)  {
-
-    .container-1 {
+    
+body.background {
+    display: grid;
+    grid-template-columns: 45% auto;
+    grid-template-rows: auto 120px 700px 700px auto;
+    grid-template-areas:
+        "hd hd"
+        "text text"
+        "img1 img2"
+        "img3 img4"
+        "foot foot";
+}
+    .container-1, .container-2 {
         width: 85%;
         height: 111%;
     }
-      .container-1 p {
+      .container-1 p, .container-2 p {
         grid-template-columns: 50%;
         font-size: 1.1em;
         top: 420px;
@@ -1221,6 +1210,21 @@ table.time-table td, .time-table th {
             "auto"
             "foot";
     }
+    body.background{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto 300px 420px 420px auto 280px;
+        grid-template-areas:
+            "hd"
+            "text"
+            "img1"
+            "img2"
+            "img3"
+            "img4"
+            "img5"
+            "auto"
+            "foot";
+    }
     div.staff {
         display: grid;
         grid-template-columns: auto;
@@ -1258,7 +1262,22 @@ div.g-pinscher#g-p {
 }
 }
 @media screen and (min-width:770px) and (max-width:900px) {
-body, body#pool-body {
+body.background{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto 300px 420px 420px auto 280px;
+    grid-template-areas:
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "img5"
+        "auto"
+        "foot";
+}
+body#pool-body {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto 300px 420px 800px auto 280px;
@@ -1272,7 +1291,7 @@ body, body#pool-body {
         "img5"
         "auto"
         "foot";
-}    
+}  
 #inner-pool {
     grid-area: img4;
 }
